# budgurse

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  TODO  amount_ideas.txt  configure.ac  configure~
src/: backend.c  backend.h  browser.c  browser.h  budgurse.c  budgurse.h  categories.c  categories.h  date.c  date.h  entries.c  entries.h  global.h  help.c  help.h  ll.c  ll.h  llist.c  llist.h  prompt.c  prompt.h  summary.c  summary.h  util.c  util.h  wins.c  wins.h
test/: backend_tests.c  browser_tests.c  categories_tests.c  entries_tests.c  gui_test  gui_test.c  llist_tests.c  misc_tests.c  prompt_tests.c  summary_tests.c  test  test.c  test.h  test_utils.c  unit_test  unit_test.c
